# mtcnn-rs

./: .gitattributes  Cargo.toml  LICENSE  README.md
benches/: detect_benchmark.rs
src/: build_engine.rs  helper.rs  image_ops.rs  interfaces.rs  lib.rs  network.rs  trt_mtcnn.rs  trt_pnet.rs  trt_rnet.rs  windows.rs
src/image_ops/: image_ops.rs  mod.rs
src/image_ops/cuda/: factory.rs  mod.rs  resize_ops.rs
src/image_ops/rust/: mod.rs  resize_ops.rs
src/test/: wrappers.rs
test_resources/: boxes.npy  boxes_1x1.npy  boxes_rnet.npy  cc0.npy  cc1.npy  cc2.npy  cc3.npy  cc4.npy  cc5.npy  cc6.npy  cc7.npy  cc8.npy  cc_rnet.npy  det1.engine  det2.engine  det3.engine  dets.npy  im_data.npy  indexedboxes.npy  numpy_dumps.md  onet.onnx  pnet.onnx  pnetboxes0.npy  pnetboxes1.npy  pnetboxes2.npy  pnetboxes3.npy  pnetboxes8.npy  pp0.npy  pp1.npy  pp2.npy  pp3.npy  pp4.npy  pp5.npy  pp6.npy  pp7.npy  pp8.npy  pp_rnet.npy  prob1.npy  rnet.onnx
tests/: trt_mtcnn_tests.rs
