[package]
name = "mtcnn-rs"
version = "0.1.0"
authors = ["Jan Van Sweevelt <vansweej@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# run tests in one thread: cargo test -- --test-threads 1
# run tests with stdout: cargo test -- --nocapture

[dependencies]
image = "0.23.12"
ndarray = "0.13.1"
ndarray-image = "0.2"
ndarray-npy = "0.6.0"
tensorrt-rs = { git = "https://github.com/vansweej/tensorrt-rs", branch = "windows_build" }

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.3", features = ["flamegraph"] }

[[bench]]
name = "detect_benchmark"
harness = false
