[package]
name = "mtcnn-rs"
version = "0.1.0"
authors = ["Jan Van Sweevelt <vansweej@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# run tests in one thread: cargo test -- --test-threads 1
# run tests with stdout: cargo test -- --nocapture
# run with flamegraph: cargo bench --bench detect_benchmark -- --profile-time=30

[dependencies]
image = "0.23.12"
ndarray = "0.14.0"
ndarray-image = "0.3.0"
ndarray-npy = "0.7.1"
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
itertools = "0.10.0"
tensorrt-rs = { git = "https://github.com/vansweej/tensorrt-rs", branch = "windows_build" }
npp-rs = { git = "https://github.com/vansweej/npp-rs.git", branch = "main" }

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.3", features = ["flamegraph"] }
pretty_assertions = "0.7.2"

[[bench]]
name = "detect_benchmark"
harness = false
